some some alignment issues with custom text field

--- a/fruitlinkit/resources/css/linkit.css
+++ b/fruitlinkit/resources/css/linkit.css
@@ -6,10 +6,7 @@
 	float:left;
 }
 .fruit-field-column:first-child div {
-	padding-right: 8px;
-}
-.fruit-field-column:last-child div {
-	padding-left: 8px;
+	padding-right: 10px;
 }
 .fruit-field-column .checkboxfield {
 	padding-top: 5px;
@@ -17,16 +14,12 @@
 .fruitlinkit {}
 .fruitlinkit-type {
 	float:left;
-	margin-bottom:16px;
-	margin-right: 16px;
+	margin-right: 10px;
 }
 .fruitlinkit-type select { max-width: 130px; }
 .fruitlinkit-options {
 	float:left;
 }
-.fruitlinkit-option,
-.fruitlinkit-text,
-.fruitlinkit-target { margin-bottom:16px; }
 
 .fruitlinkit-settings {
 	clear:both;
